<resources>
    <string name="app_name">Personal Schedule</string>

    <!--    MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Register">Register</string>

    <!--    ACTIVITY REGISTER-->
    <string name="CreateAccountTxt">Create account</string>
    <string name="NameEt">Name</string>
    <string name="GmailEt">Gmail</string>
    <string name="PasswordEt">Password</string>
    <string name="ConfirmPasswordEt">Confirm password</string>
    <string name="RegisterUser">Register</string>
    <string name="HaveAccount">I already have an account</string>
    <string name="creating_your_account">Creating your account…</string>


    <!--    LOGIN ACTIVITY-->
    <string name="LogInTXT">Log In</string>
    <string name="MailLogin">Mail</string>
    <string name="PassLogin">Password</string>
    <string name="Btn_login">Enter</string>
    <string name="NewUserTXT">You do not have an account? Sign up</string>
    <string name="logging_in">Logging in…</string>

    <!--MAIN MENU-->
    <string name="WelcomeMainMenu">Welcome</string>
    <string name="UidMain"> -- </string>
    <string name="NamesMain"> -- </string>
    <string name="MailMain"> -- </string>
    <string name="MainAccountStatus">Not verified</string>

    <string name="AddNotes">Add</string>
    <string name="ListNotes">Notes</string>
    <string name="Important">Important</string>
    <string name="Contacts">Contacts</string>
    <string name="About">About</string>
    <string name="SignOut">Sign out</string>

    <!--    ADD NOTE-->
    <string name="Uid_User">User Uid</string>
    <string name="Mail_User">User mail</string>
    <string name="Date_Hour_Actual_TXT">Registration date</string>
    <string name="Date_ActualHour">Date and actual hour</string>
    <string name="Title"> Title </string>
    <string name="Description"> Description </string>
    <string name="Btn_calendar">Calendar</string>
    <string name="Date"> 00/00/0000</string>
    <string name="State"> Not finished </string>

    <!--    MENU-->
    <string name="Add_NoteDB">Add</string>
    <string name="Update_Note_BD">Update</string>
    <string name="Empty_all_notes">Empty all notes</string>
    <string name="Filter_Notes">Filter notes</string>
    <string name="Profile_User">Profile</string>
    <string name="Configuration">Configuration</string>
    <string name="Update_Password">Update password</string>
    <string name="Add_contact">Add contact</string>
    <string name="Calendar">Calendar</string>
    <string name="EmptyContacts">Delete all contacts</string>
    <string name="Search_Contact">Search contact</string>

    <!--    ITEM NOTE-->
    <string name="Id_note_Item">Id note</string>
    <string name="Uid_User_Item">User Uid</string>
    <string name="Mail_User_Item">User mail</string>
    <string name="Date_register_hour_Item">Date and hour register</string>
    <string name="Title_Item"> Title </string>
    <string name="Description_Item"> Description </string>
    <string name="Date_Item"> 00/00/0000</string>
    <string name="State_Item"> Not finished </string>

    <!--    ITEM NOTA IMPORTANT-->
    <string name="Id_note_Item_I">Id note</string>
    <string name="Uid_User_Item_I">User Uid</string>
    <string name="Mail_User_Item_I">User mail</string>
    <string name="Date_register_hour_Item_I">Date and hour register</string>
    <string name="Title_Item_I"> Title </string>
    <string name="Description_Item_I"> Description </string>
    <string name="Date_Item_I"> 00/00/0000</string>
    <string name="State_Item_I"> Not finished </string>

    <!--    ITEM CONTACT -->
    <string name="Id_C_Item">Id contact</string>
    <string name="Uid_C_Item">User Uid</string>
    <string name="Names_C_Item">Names</string>
    <string name="LastName_C_Item">Last name</string>
    <string name="Mail_C_Item">Mail</string>
    <string name="Phone_C_Item">Phone</string>
    <string name="Age_C_Item">Age</string>
    <string name="Home_C_Item">Home</string>


    <!--    DIALOG BOX-->
    <string name="ChooseOptionTXT">Choose an option</string>
    <string name="CD_Delete">Delete</string>
    <string name="CD_Update">Update</string>

    <!--    DIALOG BOX DELETE IMPORTANT NOTE-->
    <string name="DeleteImportantNoteTXT">Remove important note from list?</string>
    <string name="DeleteNote">Delete</string>
    <string name="DeleteNoteCancel">Cancel</string>

    <!--    DIALOG BOX ESTABLISH PHONE-->
    <string name="Establish_Phone">Write your number</string>
    <string name="Btn_Accept_phone">Accept</string>

    <!--    DIALOG BOX CHOOSE IMAGE-->
    <string name="ChooseImageTxt">Choose route</string>
    <string name="Btn_ChooseGallery">Gallery</string>
    <string name="Btn_ChooseCamera">Camera</string>

    <!--    DIALOG BOX VALIDATE REGISTER CONTACT-->
    <string name="ValidateTXT">Name required</string>
    <string name="Btn_Validate_register_C">OK</string>

    <!--    DIALOG BOX CONTACT OPTIONS-->
    <string name="ChooseOptionContactTXT">Contact settings</string>
    <string name="Btn_delete_Contact">Delete</string>
    <string name="Btn_Update_Contact">Update</string>

    <!--    DIALOG BOX FILTER NOTES-->
    <string name="Filter_NotesTXT">Filter notes: </string>
    <string name="All_Notes">All</string>
    <string name="Finished_notes">Finished</string>
    <string name="Notes_NotFinished">Not finished</string>

    <!--    DIALOG BOX AUTHENTICATION-->
    <string name="ImportantTXT_Auth">Please read</string>
    <string name="MessageTXT_Auth">To delete your account you must first log out, and you will have 5 minutes to log in again and delete the account permanently.</string>
    <string name="Btn_Okay_Auth">Okay</string>
    <string name="Btn_Logout_Auth">Logout</string>

    <!--    DIALOG BOX SHOW DATE-->
    <string name="TXT_Today">Today</string>
    <string name="Today"> -- </string>
    <string name="Btn_close">Close</string>
    
    <!--    DIALOG VERIFIED ACCOUNT-->
    <string name="Verified_Account_TXT">Account verified</string>
    <string name="Understood_Verified">Understood</string>


    <!--    UPDATE NOTES-->
    <string name="Id_Note_Update">Id note</string>
    <string name="Uid_User_Update">User Uid</string>
    <string name="Mail_User_Update">User mail</string>
    <string name="Date_Register_Update">Date register</string>
    <string name="Title_Update"> Title </string>
    <string name="Description_Update"> Description </string>
    <string name="Btn_calendar_Update">Calendar</string>
    <string name="Date_Update"> 00/00/0000</string>
    <string name="State_Update"> Not finished </string>
    <string name="New_State"> -- </string>

    <!--    SPINNER-->
    <string-array name="Notes_states">
        <item>"Not finished"</item>
        <item>"finished"</item>
    </string-array>

    <!--    NOTA DETAILED-->
    <string name="Id_Note_Detail_TXT">Note ID: </string>
    <string name="Id_Note_Detail">Id note</string>
    <string name="Uid_User_Detail_TXT">User UID: </string>
    <string name="Uid_User_Detail">Uid user</string>
    <string name="Mail_User_Detail_TXT">User mail: </string>
    <string name="Mail_User_Detail">Mail user</string>
    <string name="Title_Detail_TXT">Title: </string>
    <string name="Title_Detail">Title</string>
    <string name="Description_Detail_TXT">Description: </string>
    <string name="Description_Detail">Description</string>
    <string name="Date_Registration_Detail_TXT">Registration date:</string>
    <string name="Date_Registration_Detail">Date register</string>
    <string name="Date_Note_Detail_TXT">Note date: </string>
    <string name="Date_Note_Detail">Date note</string>
    <string name="State_Note_Detail_TXT">Note status: </string>
    <string name="State_Note_Detail">Status</string>
    <string name="Btn_Important">Important</string>

    <!--    USER PROFILE-->
    <string name="Uid_Profile">Uid</string>
    <string name="Names_Profile">Name</string>
    <string name="Last_Name_Profile">Las name</string>
    <string name="Email_Profile">Mail</string>
    <string name="Age_Profile">Age</string>
    <string name="Phone_Profile">Phone</string>
    <string name="Home_Profile">Home</string>
    <string name="College_Profile">College</string>
    <string name="Profession_Profile">Profession</string>
    <string name="Save_Data">Save</string>
    <string name="Birthdate_Profile">Birthdate</string>

    <string name="BtnChooseImage">Select Image</string>
    <string name="BtnUpdateImage">Update</string>

    <!--    CHANGE PASSWORD-->
    <string name="CurrentPasswordTXT">Current password: </string>
    <string name="CurrentPassword"> -- </string>
    <string name="ETCurrentPassword">Current password</string>
    <string name="ETNewPassword">New password</string>
    <string name="ETRNewPassword">Repeat new password </string>
    <string name="BtnUpdatePassword">Update</string>

    <!--    ADD CONTACT-->
    <string name="Uid_User_C">My Uid</string>
    <string name="Names_C">Contact name</string>
    <string name="Lastname_C">Last name</string>
    <string name="Mail_C">Mail</string>
    <string name="Phone_C">Phone</string>
    <string name="Age_C">Age</string>
    <string name="Home_C">Home</string>
    <string name="Btn_Save_Contact">Save contact</string>

    <!--    CONTACT DETAIL-->
    <string name="Id_Contact_D"> -- </string>
    <string name="Uid_User_D"> -- </string>
    <string name="Name_Contact_D"> -- </string>
    <string name="Lastname_Contact_D"> -- </string>
    <string name="Mail_Contact_D"> -- </string>
    <string name="Age_Contact_D"> -- </string>
    <string name="Phone_Contact_D"> -- </string>
    <string name="Home_Contact_D"> -- </string>
    <string name="Btn_UpdateContact_D"> -- </string>
    <string name="Detail_ContactTXT">Contact detail</string>
    <string name="Call_C">Call</string>
    <string name="Message_C">Message</string>

    <!--    UPDATE CONTACT-->
    <string name="Id_Contact_Update"> -- </string>
    <string name="Uid_Contact_Update"> -- </string>
    <string name="Name_Contact_Update"> -- </string>
    <string name="Lastname_Contact_Update"> -- </string>
    <string name="Mail_Contact_Update"> -- </string>
    <string name="Phone_Contact_Update"> -- </string>
    <string name="Age_Contact_Update"> -- </string>
    <string name="Home_Contact_Update"> -- </string>
    <string name="Update_Contact_Update">Update</string>

    <!--    APP INFORMATION-->
    <string name="Developer">Developed by Jamiro</string>
    <string name="MailSupport">devjamiro@gmail.com </string>
    <string name="Version">Version: 0.1</string>
    <string name="CloseInfo">Close</string>

    <!--    CONFIGURATIONS-->
    <string name="Uid_delete">User uid</string>
    <string name="DeleteAccount">Delete account</string>


</resources>