<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Add_contact"
        android:icon="@drawable/ic_add_contact"
        android:title="@string/Add_contact"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/EmptyContacts"
        android:icon="@drawable/ic_delete_contact"
        android:title="@string/EmptyContacts"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/Search_Contact"
        android:icon="@drawable/ic_search_contact"
        android:title="@string/Search_Contact"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom">

    </item>


</menu>