<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes.Add_Note_Activity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--        UID USER-->
        <TextView
            android:id="@+id/Uid_User"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans"
            android:hint="@string/Uid_User"
            android:textSize="18sp"
            android:visibility="gone" />

        <!--        MAIL USER-->
        <TextView
            android:id="@+id/Mail_User"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans"
            android:hint="@string/Mail_User"
            android:textSize="18sp"
            android:visibility="gone" />

        <!--ICON AND TV-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

<!--            ICON-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_date_hour_register"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/nunitosans"
                android:text="@string/Date_Hour_Actual_TXT"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        DATE ACTUALHOUR-->
        <TextView
            android:id="@+id/Date_ActualHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:visibility="gone"
            android:fontFamily="@font/nunitosans"
            android:hint="@string/Date_ActualHour"
            android:textSize="18sp" />

        <!--        TITLE-->
        <EditText
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans"
            android:hint="@string/Title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--        DESCRIPTION-->
        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:hint="@string/Description"
            android:minHeight="150dp"
            android:textSize="20sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--            CALENDAR BTN-->
            <Button
                android:id="@+id/Btn_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_Button"
                android:text="@string/Btn_calendar"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_calendar" />


            <!--            DATE VISUALIZATION-->
            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/nunitosans"
                android:hint="@string/Date"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        NOTE STATE-->
        <TextView
            android:id="@+id/State"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunitosans"
            android:text="@string/State"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>