<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="filter.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Filter_NotesTXT"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunitosans"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/All_Notes"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/All_Notes"
        android:fontFamily="@font/nunitosans"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/Finished_notes"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Finished_notes"
        android:fontFamily="@font/nunitosans"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/Notes_NotFinished"
        android:text="@string/Notes_NotFinished"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>