<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans"
        android:gravity="center"
        android:text="@string/ImportantTXT_Auth"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="auth.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans"
        android:gravity="center"
        android:text="@string/MessageTXT_Auth"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Btn_Okay_Auth"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/color_pri"
        android:fontFamily="@font/nunitosans"
        android:text="@string/Btn_Okay_Auth" />

    <Button
        android:id="@+id/Btn_Logout_Auth"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/color_pri"
        android:fontFamily="@font/nunitosans"
        android:text="@string/Btn_Logout_Auth" />


</androidx.appcompat.widget.LinearLayoutCompat>